--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -21,6 +21,6 @@
 <button id="hit">Hit</button>
 <button id="stay">Stay</button>
 <p id="results"></p>
-<button id="again">Play again</button>
+<button id="again" type="button">Play again</button>
 </body>
 </html>
